# Windows-Amorphous-Bridge

./: .gitignore  FastDDS Linux Install From Binaries.md  Instructions.md
ASS NNG DDS/src/: AreaSearchStatus.hpp  AreaSearchStatusApplication.cxx  AreaSearchStatusCdrAux.hpp  AreaSearchStatusPubSubTypes.hpp  AreaSearchStatusPublisherApp.cxx  AreaSearchStatusPublisherApp.hpp  AreaSearchStatusSubscriberApp.cxx  AreaSearchStatusSubscriberApp.hpp  AreaSearchStatusmain.cxx  CMakeLists.txt  GeoCircle.hpp  GeoCircleApplication.cxx  GeoCircleCdrAux.hpp  GeoCirclePublisherApp.cxx  GeoCirclePublisherApp.hpp  GeoPointPublisherApp.hpp  GeoPointSubscriberApp.cxx  GeoPolygonApplication.cxx  GeoPolygonSubscriberApp.cxx  GeoRectangle.hpp  GeoRectangleApplication.hpp  GeoRectangleCdrAux.ipp  GeoRectanglePublisherApp.cxx  GeoRectanglePublisherApp.hpp  GeoRectangleSubscriberApp.cxx  GeoRectangleSubscriberApp.hpp  GeoRectanglemain.cxx
ZmqPublisher/: ZmqPublisher.sln
ZmqPublisher/ZmqPublisher/: AreaSearchStatus.pb.cc  AreaSearchStatus.pb.h  ZmqPublisher.cpp  ZmqPublisher.vcxproj  ZmqPublisher.vcxproj.filters  person.pb.h
ZmqPublisher/ZmqPublisher/x64/Debug/: ZmqPublisher.exe.recipe  ZmqPublisher.ilk  vc143.idb
ZmqPublisher/ZmqPublisher/x64/Debug/ZmqPublisher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZmqPublisher.lastbuildstate  ZmqPublisher.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZmqPublisherProtobuf/: CMakeLists.txt  ZmqPublisher.cpp
ZmqSubscriber NNG Flatcc/: CMakeLists.txt  ZmqNNG.cpp
ZmqSubscriber NNG Send/ZmqPublisher/: AreaSearchStatus_Generated_PBtoFB.h  AreaSearchStatus_builder.h  ZmqPublisher.cpp  ZmqPublisher.vcxproj  ZmqPublisher.vcxproj.filters  example.pb.cc  example.pb.h  example.ph.h  example_Generated_PBtoFB.h  example_reader.h  example_verifier.h  grid.pb.cc  grid.pb.h  person.fbs  shapecollection.pb.cc  shapecollection.pb.h
ZmqSubscriber NNG Send/ZmqPublisher/x64/Debug/: ZmqPublisher.exe.recipe  ZmqPublisher.ilk  vc143.idb
ZmqSubscriber NNG Send/ZmqPublisher/x64/Debug/ZmqPublisher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ZmqPublisher.lastbuildstate  ZmqPublisher.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test/: CMakeLists.txt  Person.hpp  Person.idl  PersonApplication.cxx  PersonPubSubTypes.cxx  PersonPublisherApp.cxx  PersonSubscriberApp.cxx  PersonSubscriberApp.hpp
testwork/: CMakeLists.txt
testwork/src/: AreaSearchStatus.hpp  AreaSearchStatusCdrAux.ipp  CMakeLists.txt  GeoCirclePubSubTypes.cxx  GeoCirclePubSubTypes.hpp  GeoPointCdrAux.hpp  GeoPointPubSubTypes.cxx  GeoPointPubSubTypes.hpp  GeoPolygon.hpp  GeoPolygonCdrAux.hpp  GeoPolygonCdrAux.ipp  GeoRectangle.hpp  HelloWorldPublisher.cpp  Person.hpp  Person.idl  PersonApplication.hpp  PersonCdrAux.hpp  PersonCdrAux.ipp  PersonPubSubTypes.hpp  PersonPublisherApp.cxx  PersonPublisherApp.hpp  PersonSubscriberApp.cxx  PersonSubscriberApp.hpp  Personmain.cxx  example_Generated_FastDDStoFB.h  example_builder.h  person.pb.cc  person.proto  person_generated.h
